force-app/main/default/objects/Hired_Candidate_Pool__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Hired_Candidate_Pools</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>