force-app/main/default/objects/Hired_Candidate_Pool__c/fields/Onboarding_Complted__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Complted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Complted</label>
    <type>Checkbox</type>
</CustomField>